Update reality.txt, vmess_tvc.txt, vmess.txt and related files

--- a/reality_clash.yaml
+++ b/reality_clash.yaml
@@ -29,15 +29,15 @@ proxies:
   - {"name":"❔XX | 🟢 | vless | @prrofile_purple | 140","type":"vless","server":"delta.realtechshop.top","port":443,"udp":false,"uuid":"ff8fffd7-3546-488b-a5f2-a74896da74a2","tls":false,"servername":"tgju.org","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"tw6uAbjXzRSIKChb6pDbHVNjnU9Don4hbv6dHRkmJx8","short-id":"e54b5ad736ae4c38","client-fingerprint":"firefox"},"client-fingerprint":"firefox"}
   - {"name":"🇫🇮FI | 🟢 | vless | @prrofile_purple | 144","type":"vless","server":"direct.yasharteam.com","port":443,"udp":false,"uuid":"59db3b45-830a-4b6c-8b7d-9bd6d7189c7d","tls":false,"servername":"tgju.org","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"tw6uAbjXzRSIKChb6pDbHVNjnU9Don4hbv6dHRkmJx8","short-id":"e54b5ad736ae4c38","client-fingerprint":"firefox"},"client-fingerprint":"firefox"}
   - {"name":"🇩🇪DE | 🔴 | vless | @prrofile_purple | 149","type":"vless","server":"91.107.243.238","port":2025,"udp":false,"uuid":"3f042483-c71c-40cc-a4b7-d79f80db4253","tls":false,"servername":"www.cloudflare.com","network":"grpc","grpc-opts":{"grpc-service-name":"Telegram : @PouRia_Cheat"},"reality-opts":{"public-key":"AUNIYov4R2TvNmC0cF0NiKWYGqzikosOu4g2wcCALlw","short-id":"8d9c20be72b4","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"🇯🇵JP | 🟢 | vless | @ConfigsHUB | 11","type":"vless","server":"amazon-20.cristiano.name.ng","port":443,"udp":false,"uuid":"4c26ebc3-7784-46d8-b52a-7b0ccae6f4b4","tls":false,"servername":"store.steampowered.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"TGlPtfVzGIVpMauPRMGJj2Uu6GUiCpu5ZizIIjw-wx4","short-id":"f5","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"🇯🇵JP | 🟢 | vless | @ConfigsHUB | 14","type":"vless","server":"amazon-4.cristiano.name.ng","port":443,"udp":false,"uuid":"4c26ebc3-7784-46d8-b52a-7b0ccae6f4b4","tls":false,"servername":"store.steampowered.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"TGlPtfVzGIVpMauPRMGJj2Uu6GUiCpu5ZizIIjw-wx4","short-id":"f5","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
+  - {"name":"🇯🇵JP | 🟢 | vless | @ConfigsHUB | 7","type":"vless","server":"amazon-20.cristiano.name.ng","port":443,"udp":false,"uuid":"4c26ebc3-7784-46d8-b52a-7b0ccae6f4b4","tls":false,"servername":"store.steampowered.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"TGlPtfVzGIVpMauPRMGJj2Uu6GUiCpu5ZizIIjw-wx4","short-id":"f5","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
+  - {"name":"🇩🇪DE | 🟢 | vless | @ConfigsHUB | 9","type":"vless","server":"a.de.maviks.ru","port":443,"udp":false,"uuid":"0cc4d574-cf58-4c8e-a759-3aa1f919f34b","tls":false,"servername":"www.microsoft.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"lyLhdojpACv6B3tHViJvPjNGATedXYRMnpAt4n4Siyo","short-id":"f203719d3ff9a5f5¬e=Telegram---@Raiv2mmr---Telegram---@Raiv2mmr---Telegram---@Raiv2mmr---Telegram---@Raiv2mmr---Telegram---@Raiv2mmr---Telegram---@Raiv2mmr---Telegram---@Raiv2mmr---Telegram---@Raiv2mmr---Telegram---@Raiv2mmr---","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
+  - {"name":"🇦🇲AM | 🟢 | vless | @ConfigsHUB | 13","type":"vless","server":"warning.root.info.tr","port":443,"udp":false,"uuid":"909d4490-6cbb-4006-9dbd-3c7f5d79cfda","tls":false,"servername":"sourceforge.net","network":"tcp","reality-opts":{"public-key":"D5_j99ZSJtC9MdMQGCWlVvUU0p8KRgHZ2ZEnv2z2FWU","short-id":"b8fc40ff6d873611","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇩🇪DE | 🟢 | vless | @free1_vpn | 4","type":"vless","server":"51.38.98.69","port":443,"udp":false,"uuid":"6b690c69-7301-44c4-81e8-9d5d7e8263a6","tls":false,"servername":"yahoo.com","network":"tcp","reality-opts":{"public-key":"-3sZE2OPDhkNtxufF2YqPmoa5hqVna5zalfJfrUiMm0","short-id":"ecd6615548c2bddb","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇩🇪DE | 🔴 | vless | @free1_vpn | 5","type":"vless","server":"87.120.205.207","port":2025,"udp":false,"uuid":"ebac2049-8367-4eab-a1a5-8b742b2fd3b6","tls":false,"servername":"yahoo.com","network":"grpc","grpc-opts":{"grpc-service-name":"das12327gsgsyu"},"reality-opts":{"public-key":"Cnuh4bNEBvRIjrYBEWSVhX8nr5j46lHuyen_IU2rbSk","short-id":"a76e2f1d45","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"🇳🇱NL | 🟢 | vless | @Outlinev2rayNG | 1","type":"vless","server":"31.169.124.240","port":34045,"udp":false,"uuid":"d8dd94fd-540e-461d-b5d4-acebef02c22a","tls":false,"servername":"visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me","network":"tcp","reality-opts":{"public-key":"cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA","short-id":"e8ab71d0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 4","type":"vless","server":"2.58.95.16","port":34045,"udp":false,"uuid":"d8dd94fd-540e-461d-b5d4-acebef02c22a","tls":false,"servername":"visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me","network":"tcp","reality-opts":{"public-key":"cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA","short-id":"e8ab71d0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 11","type":"vless","server":"192.145.28.109","port":34045,"udp":false,"uuid":"d8dd94fd-540e-461d-b5d4-acebef02c22a","tls":false,"servername":"visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me","network":"tcp","reality-opts":{"public-key":"cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA","short-id":"e8ab71d0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"🇨🇿CZ | 🟢 | vless | @Outlinev2rayNG | 12","type":"vless","server":"45.83.130.133","port":34045,"udp":false,"uuid":"d8dd94fd-540e-461d-b5d4-acebef02c22a","tls":false,"servername":"visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me","network":"tcp","reality-opts":{"public-key":"cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA","short-id":"e8ab71d0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"🇪🇸ES | 🟢 | vless | @Outlinev2rayNG | 13","type":"vless","server":"94.177.145.124","port":34045,"udp":false,"uuid":"d8dd94fd-540e-461d-b5d4-acebef02c22a","tls":false,"servername":"visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me","network":"tcp","reality-opts":{"public-key":"cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA","short-id":"e8ab71d0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
+  - {"name":"🇳🇱NL | 🟢 | vless | @Outlinev2rayNG | 2","type":"vless","server":"31.169.124.240","port":34045,"udp":false,"uuid":"d8dd94fd-540e-461d-b5d4-acebef02c22a","tls":false,"servername":"visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me","network":"tcp","reality-opts":{"public-key":"cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA","short-id":"e8ab71d0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
+  - {"name":"🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 5","type":"vless","server":"2.58.95.16","port":34045,"udp":false,"uuid":"d8dd94fd-540e-461d-b5d4-acebef02c22a","tls":false,"servername":"visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me","network":"tcp","reality-opts":{"public-key":"cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA","short-id":"e8ab71d0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
+  - {"name":"🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 12","type":"vless","server":"192.145.28.109","port":34045,"udp":false,"uuid":"d8dd94fd-540e-461d-b5d4-acebef02c22a","tls":false,"servername":"visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me","network":"tcp","reality-opts":{"public-key":"cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA","short-id":"e8ab71d0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
+  - {"name":"🇨🇿CZ | 🟢 | vless | @Outlinev2rayNG | 13","type":"vless","server":"45.83.130.133","port":34045,"udp":false,"uuid":"d8dd94fd-540e-461d-b5d4-acebef02c22a","tls":false,"servername":"visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me","network":"tcp","reality-opts":{"public-key":"cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA","short-id":"e8ab71d0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇩🇪DE | 🟢 | vless | @FreakConfig | 2","type":"vless","server":"frangets.rtpxc.com","port":8991,"udp":false,"uuid":"4ed90fc3-c483-4f0a-847c-2d57f2160546","tls":false,"servername":"Yahoo.com","network":"tcp","reality-opts":{"public-key":"4iRgsprSY0pw6exP4rZhesdsjuLANTNEy2clmgh9i1Q","short-id":"ab23a2cd0e3de56a","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇺🇸US | 🔴 | vless | @FreakConfig | 9","type":"vless","server":"159.203.141.231","port":2053,"udp":false,"uuid":"6d5afbb4-450c-4798-91ab-71a792b487bb","tls":false,"servername":"openstreetmap.org","network":"xhttp","reality-opts":{"public-key":"lHqhMsZfvb_xaxQPKOyIDlaSREGM9tFWjVxl4k9aiBg","short-id":"60f78c","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇳🇱NL | 🟢 | vless | @FreakConfig | 12","type":"vless","server":"5.129.208.19","port":34045,"udp":false,"uuid":"d8dd94fd-540e-461d-b5d4-acebef02c22a","tls":false,"servername":"visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me","network":"tcp","reality-opts":{"public-key":"cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA","short-id":"e8ab71d0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
@@ -82,15 +82,15 @@ proxy-groups:
       - '❔XX | 🟢 | vless | @prrofile_purple | 140'
       - '🇫🇮FI | 🟢 | vless | @prrofile_purple | 144'
       - '🇩🇪DE | 🔴 | vless | @prrofile_purple | 149'
-      - '🇯🇵JP | 🟢 | vless | @ConfigsHUB | 11'
-      - '🇯🇵JP | 🟢 | vless | @ConfigsHUB | 14'
+      - '🇯🇵JP | 🟢 | vless | @ConfigsHUB | 7'
+      - '🇩🇪DE | 🟢 | vless | @ConfigsHUB | 9'
+      - '🇦🇲AM | 🟢 | vless | @ConfigsHUB | 13'
       - '🇩🇪DE | 🟢 | vless | @free1_vpn | 4'
       - '🇩🇪DE | 🔴 | vless | @free1_vpn | 5'
-      - '🇳🇱NL | 🟢 | vless | @Outlinev2rayNG | 1'
-      - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 4'
-      - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 11'
-      - '🇨🇿CZ | 🟢 | vless | @Outlinev2rayNG | 12'
-      - '🇪🇸ES | 🟢 | vless | @Outlinev2rayNG | 13'
+      - '🇳🇱NL | 🟢 | vless | @Outlinev2rayNG | 2'
+      - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 5'
+      - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 12'
+      - '🇨🇿CZ | 🟢 | vless | @Outlinev2rayNG | 13'
       - '🇩🇪DE | 🟢 | vless | @FreakConfig | 2'
       - '🇺🇸US | 🔴 | vless | @FreakConfig | 9'
       - '🇳🇱NL | 🟢 | vless | @FreakConfig | 12'
@@ -135,15 +135,15 @@ proxy-groups:
       - '❔XX | 🟢 | vless | @prrofile_purple | 140'
       - '🇫🇮FI | 🟢 | vless | @prrofile_purple | 144'
       - '🇩🇪DE | 🔴 | vless | @prrofile_purple | 149'
-      - '🇯🇵JP | 🟢 | vless | @ConfigsHUB | 11'
-      - '🇯🇵JP | 🟢 | vless | @ConfigsHUB | 14'
+      - '🇯🇵JP | 🟢 | vless | @ConfigsHUB | 7'
+      - '🇩🇪DE | 🟢 | vless | @ConfigsHUB | 9'
+      - '🇦🇲AM | 🟢 | vless | @ConfigsHUB | 13'
       - '🇩🇪DE | 🟢 | vless | @free1_vpn | 4'
       - '🇩🇪DE | 🔴 | vless | @free1_vpn | 5'
-      - '🇳🇱NL | 🟢 | vless | @Outlinev2rayNG | 1'
-      - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 4'
-      - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 11'
-      - '🇨🇿CZ | 🟢 | vless | @Outlinev2rayNG | 12'
-      - '🇪🇸ES | 🟢 | vless | @Outlinev2rayNG | 13'
+      - '🇳🇱NL | 🟢 | vless | @Outlinev2rayNG | 2'
+      - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 5'
+      - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 12'
+      - '🇨🇿CZ | 🟢 | vless | @Outlinev2rayNG | 13'
       - '🇩🇪DE | 🟢 | vless | @FreakConfig | 2'
       - '🇺🇸US | 🔴 | vless | @FreakConfig | 9'
       - '🇳🇱NL | 🟢 | vless | @FreakConfig | 12'
@@ -187,15 +187,15 @@ proxy-groups:
       - '❔XX | 🟢 | vless | @prrofile_purple | 140'
       - '🇫🇮FI | 🟢 | vless | @prrofile_purple | 144'
       - '🇩🇪DE | 🔴 | vless | @prrofile_purple | 149'
-      - '🇯🇵JP | 🟢 | vless | @ConfigsHUB | 11'
-      - '🇯🇵JP | 🟢 | vless | @ConfigsHUB | 14'
+      - '🇯🇵JP | 🟢 | vless | @ConfigsHUB | 7'
+      - '🇩🇪DE | 🟢 | vless | @ConfigsHUB | 9'
+      - '🇦🇲AM | 🟢 | vless | @ConfigsHUB | 13'
       - '🇩🇪DE | 🟢 | vless | @free1_vpn | 4'
       - '🇩🇪DE | 🔴 | vless | @free1_vpn | 5'
-      - '🇳🇱NL | 🟢 | vless | @Outlinev2rayNG | 1'
-      - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 4'
-      - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 11'
-      - '🇨🇿CZ | 🟢 | vless | @Outlinev2rayNG | 12'
-      - '🇪🇸ES | 🟢 | vless | @Outlinev2rayNG | 13'
+      - '🇳🇱NL | 🟢 | vless | @Outlinev2rayNG | 2'
+      - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 5'
+      - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 12'
+      - '🇨🇿CZ | 🟢 | vless | @Outlinev2rayNG | 13'
       - '🇩🇪DE | 🟢 | vless | @FreakConfig | 2'
       - '🇺🇸US | 🔴 | vless | @FreakConfig | 9'
       - '🇳🇱NL | 🟢 | vless | @FreakConfig | 12'
