--- a/reality_clash.yaml
+++ b/reality_clash.yaml
@@ -13,7 +13,7 @@ proxies:
   - {"name":"🇫🇮FI | 🔴 | vless | @melov2ray | 61","type":"vless","server":"65.109.208.107","port":2083,"udp":false,"uuid":"0c2a1be7-cdde-4854-a45c-ddec52584fa1","tls":false,"servername":"khamenei.ir","network":"grpc","grpc-opts":{"grpc-service-name":"melov2ray"},"reality-opts":{"public-key":"mDWXgatiJqUc4fmeDQqGusEBIhjFVrQ85y_ZUfNpFV8","short-id":"54602915a7","client-fingerprint":"firefox"},"client-fingerprint":"firefox"}
   - {"name":"🇩🇪DE | 🔴 | vless | @CUSTOMVPNSERVER | 17","type":"vless","server":"91.107.254.202","port":8443,"udp":false,"uuid":"a6580107-b1e0-4057-9f47-ac7f28de457a","tls":false,"servername":"firebase.googleapis.com","network":"xhttp","reality-opts":{"public-key":"4Xu_jqRD-mbhEwNyntlz_6zU4VhsE0-QWCxAbhEL_H4","short-id":"7ab467","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇹🇷TR | 🟢 | vless | @proxy_kafee | 11","type":"vless","server":"45.12.143.191","port":20329,"udp":false,"uuid":"e105e56a-5f81-41a2-ab44-bfffc9b00674","tls":false,"servername":"yahoo.com","network":"tcp","reality-opts":{"public-key":"Lj3MXlg16CTFHtU88acSS-ACfGnwJ_xkU6dC6k8OeDo","short-id":"4602ee9f9f36","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"🇳🇱NL | 🟢 | vless | @Outline_Vpn | 8","type":"vless","server":"185.250.181.128","port":16106,"udp":false,"uuid":"aa1aac84-6a86-41b9-bd34-1a036e06976f","tls":false,"servername":"yahoo.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"FnkrwrjQqktvwxPvLn7KyWZIq8bUAvVaeCrI_VhAZ34","short-id":"3b6239cf6fd84dd3","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
+  - {"name":"🇫🇮FI | 🟢 | vless | @Outline_Vpn | 8","type":"vless","server":"185.250.181.128","port":16106,"udp":false,"uuid":"aa1aac84-6a86-41b9-bd34-1a036e06976f","tls":false,"servername":"yahoo.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"FnkrwrjQqktvwxPvLn7KyWZIq8bUAvVaeCrI_VhAZ34","short-id":"3b6239cf6fd84dd3","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇨🇭CH | 🟢 | vless | @Outline_Vpn | 10","type":"vless","server":"5.182.36.251","port":16331,"udp":false,"uuid":"d7dbeb1e-268c-465c-8f59-489f14703efd","tls":false,"servername":"yahoo.com","network":"tcp","reality-opts":{"public-key":"wYtc0dMr5fw5bBQkbLNpTqtu0m4B9NKnOyEWjRJUmzk","short-id":"910aab","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇩🇪DE | 🟢 | vless | @Outline_Vpn | 12","type":"vless","server":"deu246.bypassall.org","port":443,"udp":false,"uuid":"b4b8aa1f-77d2-4851-a5a4-f78886f3e997","tls":false,"servername":"www.bing.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"BhTJ3phnq-Z-10aFKSsj1lzhA8mULR4L6leE4-0WTAs","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇩🇪DE | 🟢 | vless | @Outline_Vpn | 15","type":"vless","server":"greenwolf.fonixapp.org","port":12901,"udp":false,"uuid":"d2bcb15b-8cf0-402c-af32-6b04615144c9","tls":false,"servername":"canva.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"UIgzNUpO2PvGIgjtIK1GEikBFRVvfA1jm7bfor0HlAM","short-id":"b538b3","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
@@ -29,7 +29,6 @@ proxies:
   - {"name":"❔XX | 🟢 | vless | @prrofile_purple | 139","type":"vless","server":"delta.realtechshop.top","port":443,"udp":false,"uuid":"ff8fffd7-3546-488b-a5f2-a74896da74a2","tls":false,"servername":"tgju.org","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"tw6uAbjXzRSIKChb6pDbHVNjnU9Don4hbv6dHRkmJx8","short-id":"e54b5ad736ae4c38","client-fingerprint":"firefox"},"client-fingerprint":"firefox"}
   - {"name":"🇫🇮FI | 🟢 | vless | @prrofile_purple | 143","type":"vless","server":"direct.yasharteam.com","port":443,"udp":false,"uuid":"59db3b45-830a-4b6c-8b7d-9bd6d7189c7d","tls":false,"servername":"tgju.org","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"tw6uAbjXzRSIKChb6pDbHVNjnU9Don4hbv6dHRkmJx8","short-id":"e54b5ad736ae4c38","client-fingerprint":"firefox"},"client-fingerprint":"firefox"}
   - {"name":"🇩🇪DE | 🔴 | vless | @prrofile_purple | 148","type":"vless","server":"91.107.243.238","port":2025,"udp":false,"uuid":"3f042483-c71c-40cc-a4b7-d79f80db4253","tls":false,"servername":"www.cloudflare.com","network":"grpc","grpc-opts":{"grpc-service-name":"Telegram : @PouRia_Cheat"},"reality-opts":{"public-key":"AUNIYov4R2TvNmC0cF0NiKWYGqzikosOu4g2wcCALlw","short-id":"8d9c20be72b4","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"🇺🇸US | 🟢 | vless | @ConfigsHUB | 2","type":"vless","server":"44.226.198.143","port":4433,"udp":false,"uuid":"7fc993f5-7cd7-4485-9e6f-1f7c5160c910","tls":false,"servername":"stackoverflow.com","network":"tcp","reality-opts":{"public-key":"tZn5Tdrk045zSTbBEzGwSV_LOdCZqEwT8c85pJOK_C0","short-id":"f785b38130e64177","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇩🇪DE | 🟢 | vless | @free1_vpn | 6","type":"vless","server":"51.38.98.69","port":443,"udp":false,"uuid":"6b690c69-7301-44c4-81e8-9d5d7e8263a6","tls":false,"servername":"yahoo.com","network":"tcp","reality-opts":{"public-key":"-3sZE2OPDhkNtxufF2YqPmoa5hqVna5zalfJfrUiMm0","short-id":"ecd6615548c2bddb","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇫🇮FI | 🔴 | vless | @Outlinev2rayNG | 0","type":"vless","server":"deepend.paneltelecode.xyz","port":443,"udp":false,"uuid":"028e0ae7-5640-492d-bdae-f3c44d47e42d","tls":false,"servername":"afternic.com","network":"grpc","grpc-opts":{"grpc-service-name":"Dev"},"reality-opts":{"public-key":"J5aaCYQft4PeaMxenmrVh5WUQYRXuKNUtblM9TRpXAk","short-id":"cc26b226","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 5","type":"vless","server":"2.58.95.16","port":34045,"udp":false,"uuid":"d8dd94fd-540e-461d-b5d4-acebef02c22a","tls":false,"servername":"visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me","network":"tcp","reality-opts":{"public-key":"cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA","short-id":"e8ab71d0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
@@ -61,7 +60,7 @@ proxy-groups:
       - '🇫🇮FI | 🔴 | vless | @melov2ray | 61'
       - '🇩🇪DE | 🔴 | vless | @CUSTOMVPNSERVER | 17'
       - '🇹🇷TR | 🟢 | vless | @proxy_kafee | 11'
-      - '🇳🇱NL | 🟢 | vless | @Outline_Vpn | 8'
+      - '🇫🇮FI | 🟢 | vless | @Outline_Vpn | 8'
       - '🇨🇭CH | 🟢 | vless | @Outline_Vpn | 10'
       - '🇩🇪DE | 🟢 | vless | @Outline_Vpn | 12'
       - '🇩🇪DE | 🟢 | vless | @Outline_Vpn | 15'
@@ -77,7 +76,6 @@ proxy-groups:
       - '❔XX | 🟢 | vless | @prrofile_purple | 139'
       - '🇫🇮FI | 🟢 | vless | @prrofile_purple | 143'
       - '🇩🇪DE | 🔴 | vless | @prrofile_purple | 148'
-      - '🇺🇸US | 🟢 | vless | @ConfigsHUB | 2'
       - '🇩🇪DE | 🟢 | vless | @free1_vpn | 6'
       - '🇫🇮FI | 🔴 | vless | @Outlinev2rayNG | 0'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 5'
@@ -109,7 +107,7 @@ proxy-groups:
       - '🇫🇮FI | 🔴 | vless | @melov2ray | 61'
       - '🇩🇪DE | 🔴 | vless | @CUSTOMVPNSERVER | 17'
       - '🇹🇷TR | 🟢 | vless | @proxy_kafee | 11'
-      - '🇳🇱NL | 🟢 | vless | @Outline_Vpn | 8'
+      - '🇫🇮FI | 🟢 | vless | @Outline_Vpn | 8'
       - '🇨🇭CH | 🟢 | vless | @Outline_Vpn | 10'
       - '🇩🇪DE | 🟢 | vless | @Outline_Vpn | 12'
       - '🇩🇪DE | 🟢 | vless | @Outline_Vpn | 15'
@@ -125,7 +123,6 @@ proxy-groups:
       - '❔XX | 🟢 | vless | @prrofile_purple | 139'
       - '🇫🇮FI | 🟢 | vless | @prrofile_purple | 143'
       - '🇩🇪DE | 🔴 | vless | @prrofile_purple | 148'
-      - '🇺🇸US | 🟢 | vless | @ConfigsHUB | 2'
       - '🇩🇪DE | 🟢 | vless | @free1_vpn | 6'
       - '🇫🇮FI | 🔴 | vless | @Outlinev2rayNG | 0'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 5'
@@ -156,7 +153,7 @@ proxy-groups:
       - '🇫🇮FI | 🔴 | vless | @melov2ray | 61'
       - '🇩🇪DE | 🔴 | vless | @CUSTOMVPNSERVER | 17'
       - '🇹🇷TR | 🟢 | vless | @proxy_kafee | 11'
-      - '🇳🇱NL | 🟢 | vless | @Outline_Vpn | 8'
+      - '🇫🇮FI | 🟢 | vless | @Outline_Vpn | 8'
       - '🇨🇭CH | 🟢 | vless | @Outline_Vpn | 10'
       - '🇩🇪DE | 🟢 | vless | @Outline_Vpn | 12'
       - '🇩🇪DE | 🟢 | vless | @Outline_Vpn | 15'
@@ -172,7 +169,6 @@ proxy-groups:
       - '❔XX | 🟢 | vless | @prrofile_purple | 139'
       - '🇫🇮FI | 🟢 | vless | @prrofile_purple | 143'
       - '🇩🇪DE | 🔴 | vless | @prrofile_purple | 148'
-      - '🇺🇸US | 🟢 | vless | @ConfigsHUB | 2'
       - '🇩🇪DE | 🟢 | vless | @free1_vpn | 6'
       - '🇫🇮FI | 🔴 | vless | @Outlinev2rayNG | 0'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 5'
